# trade-sim

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  buf.gen.yaml  cmd_save.sh  docker-compose.yml  notes.md  pbcopy  project-plan.md  recipe.json  start.sh  testfile-line.yml  testfile.yml  watch.sh
.cargo/: config.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/agent/: mod.rs
lib/src/market/: exchanger.rs  mod.rs
lib/src/types/: basic_impls.rs  mod.rs
proto/: modelserver.proto  types.proto
server/: Cargo.toml  build.rs
server/src/: grpc.rs  lib.rs  modelserver.rs  web.rs
sim/: Cargo.toml  arch.md
sim/src/: agent_behavior.rs  lib.rs  movement.rs  order_clearing.rs
src/: init.rs  main.rs  market.rs  prelude.rs  types.rs  web.rs
src/agent/: impls.rs  mod.rs
src/market/: exchanger.rs  linear_market.rs  market_info.rs  mod.rs  money.rs  pricer.rs
src/types/: basic_impls.rs  mod.rs
trade-flow-frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
trade-flow-frontend/.storybook/: preview.js
trade-flow-frontend/src/: index.tsx  random_gen.ts  sim_api.ts  types.ts  utils.ts
trade-flow-frontend/src/components/: InfoBox.tsx  app.tsx  canvas.tsx  error-boundary.tsx  graph.tsx  info-box.tsx  info-table.tsx  info_box.tsx  info_table.tsx  random_gen.ts  visual.tsx  wrapper.tsx
trade-flow-frontend/src/stories/: basic-table.stories.tsx  basic-table.tsx  canvas.stories.tsx  canvas.tsx  hover-info.stories.tsx  hover-info.tsx  main-view.stories.tsx  main-view.tsx  overlay-window.stories.tsx  overlay-window.tsx  top-control-bar.stories.tsx  top-control-bar.tsx
trade-flow-frontend/src/stories/graphics/: graph.stories.tsx  graph.tsx  graphics-utils.stories.tsx  graphics-utils.tsx  graphics.stories.tsx  graphics.tsx
trade-flow-frontend/src/stories/misc/: basic-table.stories.tsx  basic-table.tsx  experiments.stories.tsx  mocks.tsx
trade-flow-frontend/src/stories/tabs/: agents.tsx  cities.tsx  overlay-window.stories.tsx  overlay-window.tsx
trade-sim-grpc/: Cargo.toml  build.rs
trade-sim-grpc/src/: lib.rs  trade_sim.rs
types/: Cargo.toml
types/src/: basic_impls.rs  lib.rs  prelude.rs  query_like.rs  utility.rs
types/src/agent/: impls.rs  mod.rs
types/src/market/: exchanger.rs  linear_market.rs  mod.rs  money.rs  pricer.rs
