[workspace]
members = [
    "types",
    "server",
    "sim",
]

[package]
name = "trade-sim"
version = "0.1.0"
authors = ["Joe Howarth <josephehowarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bevy = { version = "0.5.0", features = ["dynamic"] }
derive_more = "0.99.14"
rand = { version = "0.8.3", features = ["small_rng"] }
serde = "1.0.126"
serde_yaml = "0.8.17"
structopt = "0.3.21"
warp = "0.3.1"
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["full"] }

types = { path = "./types" }
sim = { path = "./sim" }
server = { path = "./server" }

