[workspace]
resolver = "2"
members = [
    "types",
    "server",
    "sim",
]

[package]
name = "trade-sim"
version = "0.1.0"
authors = ["Joe Howarth <josephehowarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
types = { path = "./types" }
sim = { path = "./sim" }
server = { path = "./server" }
anyhow = "1.0.40"
bevy = { version = "0.6.1" }
derive_more = "0.99.14"
rand = { version = "0.8.3", features = ["small_rng"] }
serde = "1.0.126"
serde_yaml = "0.8.17"
structopt = "0.3.21"
serde_json = "1.0.64"
ustr = "0.8.0"
futures-util = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
bytes = "1"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
prost-derive = "0.11"