[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
derive_more = "0.99.11"
rand = { version = "0.8.0", features = ["small_rng"] }
serde = "1.0.118"
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["full"] }
types = { path = "../types" }
tracing = "0.1"
futures-util = "0.3.16"
vec_map = "0.8.2"
futures = "0.3.16"
rouille = "3.2"
