[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
derive_more = "0.99.11"
rand = { version = "0.8.0", features = ["small_rng"] }
serde = { version = "1.0.118", features = ['rc'] }
serde_json = "1.0.61"
types = { path = "../types" }
tracing = "0.1"
futures-util = "0.3.16"
vec_map = "0.8.2"
futures = "0.3.16"
rouille = "3.2"

tokio = { version = "1.9.0", features = ["full"] }
bytes = "1"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
prost-derive = "0.11"
tonic = "0.8"
tonic-web = "0.4"
tokio-stream = { version = "0.1.9", features = ["sync"]}
async-stream = "0.3.3"

[build-dependencies]
tonic-build = "0.8"
