[package]
name = "sim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1" }
anyhow = "1.0.40"
derive_more = "0.99.14"
serde = "1.0.126"
rand = { version = "0.8.3", features = ["small_rng"] }
types = { path = "../types" }
